sana_derive/tests/ui/fail-01-need-error-token.stderr
error: The enum lacks an #[error] token
 --> $DIR/fail-01-need-error-token.rs:4:6
  |
4 | enum Token { }
  |      ^^^^^
