sana_derive/tests/ui/fail-01-need-error-token.rs
use sana_derive::Sana;

#[derive(Clone, Copy, Sana)]
enum Token { }

fn main() { }
